Better TextArea Size For XML

--- a/playground/index.html
+++ b/playground/index.html
@@ -31,8 +31,8 @@
                 <input type="button" value="Export to XML" onclick="toXml()">
                 &nbsp;
                 <input type="button" value="Import from XML" onclick="fromXml()" id="import">
-                <br>
-                <textarea id="importExport" style="width: 30%; height: 30%"
+                <br><br>
+                <textarea id="importExport" style="width: 480px; height: 360px"
                 onchange="taChange();" onkeyup="taChange()"></textarea>
             </p>
             Block explorer
