Removed taChange from HTML

--- a/playground/index.html
+++ b/playground/index.html
@@ -37,8 +37,7 @@
                 &nbsp;
                 <input type="button" value="Import from XML" onclick="fromXml()" id="import">
                 <br><br>
-                <textarea id="importExport" style="width: 480px; height: 360px"
-                onchange="taChange();" onkeyup="taChange()"></textarea>
+                <textarea id="importExport" style="width: 480px; height: 360px"></textarea>
             </p>
         </div>
     </div>
