Added A Newline and Removed Fallback Project

--- a/playground/index.html
+++ b/playground/index.html
@@ -32,8 +32,8 @@
             <pre id="blockexplorer"></pre>
         </div>
         <div id="tab-importexport">
-            Import/Export
-            <input id="projectId" value="119615668" />
+            Import/Export<br />
+            <input id="projectId" value="" />
             <button id="projectLoadButton">Load SB2</button><br />
             <p>
                 <input type="button" value="Export to XML" onclick="toXml()">
