Better Description Of SB2 Import Field

--- a/playground/index.html
+++ b/playground/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="tab-importexport">
             Import/Export<br />
-            <input id="projectId" value="" />
+            Project ID: <input id="projectId" value="" />
             <button id="projectLoadButton">Load SB2</button><br />
             <p>
                 <input type="button" value="Export to XML" onclick="toXml()">
