The XML Import Area Doses Not Need To Be Resizable!

--- a/playground/index.html
+++ b/playground/index.html
@@ -40,7 +40,7 @@
                 &nbsp;
                 <input type="button" value="Import from XML" onclick="fromXml()" id="import">
                 <br><br>
-                <textarea id="importExport"></textarea>
+                <input id="importExport"></textarea>
             </p>
         </div>
     </div>
