Add Scratch Player Bar HTML

--- a/playground/index.html
+++ b/playground/index.html
@@ -17,8 +17,10 @@
         </ul><br />
         <div id="tab-renderexplorer">
             Home<br />
-            <button id="greenflag">Green flag</button>
-            <button id="stopall">Stop</button><br />
+            <rendererTop><rendererButtons>
+                <button id="greenflag">Green flag</button>
+                <button id="stopall">Stop</button><br />
+            </rendererButtons></rendererTop>
             <canvas id="scratch-stage" style="width: 480px; height: 360px;"></canvas><br />
             <select id="selectedTarget" multiple></select><br />
         </div>
