--- a/playground/index.html
+++ b/playground/index.html
@@ -10,8 +10,13 @@
 <body>
     <div id="vm-devtools">
         <h2>Scratch VM Playground</h2>
-        <select id="selectedTarget" multiple></select><br />
-        <ul id="projectBar">
+        <select id="selectedTarget" multiple></select>
+        <div id="projectButtons">
+            <button id="greenflag">Green flag</button>
+            <button id="stopall">Stop</button>
+        </div>
+        <br />
+        <ul id="playgroundLinks">
             <li><a id="renderexplorer-link" href="#">Renderer</a></li>
             <li><a id="threadexplorer-link" href="#">Threads</a></li>
             <li><a id="blockexplorer-link" href="#">Block Representation</a></li>
@@ -19,12 +24,6 @@
         </ul><br />
         <div id="tab-renderexplorer">
             Renderer<br />
-            <div id="rendererTop">
-                <div id="rendererButtons">
-                    <button id="greenflag">Green flag</button>
-                    <button id="stopall">Stop</button><br />
-                </div>
-            </div>
             <canvas id="scratch-stage" style="width: 480px; height: 360px;"></canvas><br />
         </div>
         <div id="tab-threadexplorer">
