--- a/playground/index.html
+++ b/playground/index.html
@@ -14,6 +14,7 @@
         <div id="projectButtons">
             <button id="greenflag">Green flag</button>
             <button id="stopall">Stop</button>
+            <button id="createEmptyProject">New Project</button>
         </div>
         <br />
         <ul id="playgroundLinks">
