--- a/playground/index.html
+++ b/playground/index.html
@@ -14,7 +14,6 @@
         <div id="projectButtons">
             <button id="greenflag">Green flag</button>
             <button id="stopall">Stop</button>
-            <button id="createEmptyProject">New Project</button>
         </div>
         <br />
         <ul id="playgroundLinks">
@@ -36,6 +35,7 @@
             <pre id="blockexplorer"></pre>
         </div>
         <div id="tab-importexport">
+            <button id="createEmptyProject">New Project</button><br />
             Import/Export<br />
             Project ID: <input id="projectId" value="119615668" />
             <button id="projectLoadButton">Load</button><br />
