--- a/playground/index.html
+++ b/playground/index.html
@@ -39,13 +39,12 @@
             Project ID: <input id="projectId" value="119615668" />
             <button id="projectLoadButton">Load</button>
             <button id="createEmptyProject">New Project</button><br />
-            <p>
-                <input type="button" value="Export to JSON" onclick="toJSON()">
-                &nbsp;
-                <input type="button" value="Import from JSON" onclick="fromJSON()" id="import">
-                <br /><br />
-                <textarea id="importExport"></textarea>
-            </p>
+            Upload JSON File: <input type=file id="jsonPicker" accept=".json" /><br />
+            <input type="button" value="Export to JSON" onclick="toJSON()">
+            <input type="button" value="Import from JSON" onclick="fromJSON()" id="import">
+            <input type="button" value="Export to JSON and Download" onclick="toJSONandDownload()">
+            <br />
+            <textarea id="importExport"></textarea>
         </div>
     </div>
 
@@ -787,10 +786,18 @@
             output.focus();
             output.select();
         }
-
         function fromJSON() {
             var input = document.getElementById('importExport');
             window.vm.fromJSON(input.value);
+        }
+        function toJSONandDownload() {
+            window.vm.projectName = prompt('Name Your Project', window.vm.projectName);
+            var hiddenElement = document.createElement('a');
+            hiddenElement.href = 'data:attachment/text,' + encodeURI(window.vm.toJSON());
+            hiddenElement.target = '_blank';
+            hiddenElement.download = window.vm.projectName + '.json';
+            hiddenElement.click();
+            delete hiddenElement;
         }
     </script>
 </body>
