--- a/playground/index.html
+++ b/playground/index.html
@@ -787,6 +787,10 @@
             output.select();
         }
         function fromJSON() {
+            var tabBlockExplorer = document.getElementById('tab-blockexplorer');
+            var tabThreadExplorer = document.getElementById('tab-threadexplorer');
+            var tabRenderExplorer = document.getElementById('tab-renderexplorer');
+            var tabImportExport = document.getElementById('tab-importexport');
             var input = document.getElementById('importExport');
             window.vm.fromJSON(input.value);
             window.exploreTabOpen = false;
