--- a/playground/embed-test.html
+++ b/playground/embed-test.html
@@ -1,2 +1,2 @@
-<embed width="520px" height="395px" src="embed.html" style="overflow:hidden;">
+<embed width="500px" height="401px" src="embed.html">
 <p>Hi</p>
