--- a/playground/embed.html
+++ b/playground/embed.html
@@ -10,7 +10,7 @@
         <button id="greenflag">Green flag</button>
         <button id="stopall">Stop</button>
     </div>
-    <canvas id="scratch-stage" style="width: 480px; height: 360px;"></canvas><br />
+    <canvas id="scratch-stage" style="width: 480px; height: 360px;"></canvas>
 
     <div id="blocks" style="display: none;"></div>
 
