Build for 37417cb43ce71540eef6fd325d337d5b2139e712 c9f49cc8ae6b49d6c744d83332c37a2407c2b51d 9f59efb39e9851759a502f49a84d6da5ff5f34f0 170adf41b7e4c11ecb558bd5bb293008d3a539c6 6d37d4a5bbf9276e9ce620bdc64c6a112007f9c2 36fc03851c58c1fc39e11ec4b29fca969fcc0461 2d736f2b871fdcec1c6cd9c063be3d72956db933 a118d500565f72aa86f256a119d95d46b7546c4a a687184c3c5298188d2f4f4a226502bb5c40a4e4 aa5e8d264888bcdd8ed6d090b5d0b05e94ded8ca f9efc2b4bcf63a38794156e832320d693d6ff05b 32b4374a56c946ca4aa7180a7aca37af0bf66732 bb7dee60871cf630cc6eb3dced549a939edd9975 e6896647331ffdfb6464fcbf2d4e91d9b8206c43 9884c583a92f154e8f01af8953b6b9c54bded5ce 4e547556a8065353e34009f798e170103404c0d0 fa10a2279acc8450baedcb583b9b01a1ab2744e6 499ba5235ca0316fccb95660ee0cef069a4996e6 c02ee88d0247528f8fc0911c0fa057f60131d205 13f287e8712fdd2cfeed31a0d61893f4279385a3 470f686662ac5e057c05fa5739ed46f85cf4e2da 9744bcbb7060a7266168bb84e76a7b6ed9eb6810 542899949eefb8921a8dcbd24b7127497caa34d3 6b3f0d3d8af7f487856d3b28753921d9bbb2ebe6 89873308531b8be701292fbbe8af65546fc17279 9b4433069e4d20cf210ee3849b1f5508e0576544 1ebee14eb0f6f6b6922b1e76caf526c1daae2423 b6e30a7b23e5ebad5e6f2c89c4158593ef4b4fd7 dec5d054c842b49b1e323eda1589ff313b1a7111 6b08b95b97103d9d188629508328f4ba44c50e50 08b40b4d1daa5adb32ebc7325e9489c0a6545023 833c5ed313be8c07c73114f3b62d7c3d0512cc87 c357a62005eaa60359954fb013bf9fc1f3e07c0c 91cdec15474d86b960f64ce952c0ff432d524fbe bbea1af5a34b265e3f112b044aa38d7d4564c801 ebbfe881db6033c454bff1ed7a65291d7e83b2da 79346c0925e41d14543c8bd9e96961495f805c37 40b530fa7e134dac857d2519fc62daec783a09f3 d93eeed05d21dbfd5e8a844eabe3861fef45c466 5df0acc895a552067c43606ef1728437218723e0 797f844de30df394068026bed2e7c09b7508d2a9 14feb64005fa33b172d165e1cae59a3f47e8a3a3 f7e339f7c2609341f0b57044c78e04421f10eaae 3fcd70a8028f33050189ea029996e26bef874910 3dbfc3fdb6e3a37be5367bff4f638f6cf949fb88 9a8b68643a0a67e4913e8a58bdcb2b23b7105b5a 7caf8e588aa61f00b55525a31a50da3c9afae852 2b84c8d0fec6e8d31f11bb5177dfc28aad2a290b 8e217a75ab1045808a547e

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Scratch VM Playground</title>
     <link rel="stylesheet" href="playground.css">
-    <link rel="stylesheet" href="../node_modules/highlightjs/styles/zenburn.css">
+    <link rel="stylesheet" href="zenburn.css">
 </head>
 <body>
     <div id="vm-devtools">
