30TPS compatibility mode

--- a/playground/index.html
+++ b/playground/index.html
@@ -21,6 +21,9 @@
         <div>
             Pause: <input id='pausemode' type='checkbox' />
         </div>
+        <div>
+            Compatibility (30 TPS):  <input id='compatmode' type='checkbox' />
+        </div>
         <br />
         <ul id="playgroundLinks">
             <li><a id="renderexplorer-link" href="#">Renderer</a></li>
