Add basic single-stepping

--- a/playground/index.html
+++ b/playground/index.html
@@ -24,6 +24,9 @@
         <div>
             Compatibility (30 TPS):  <input id='compatmode' type='checkbox' />
         </div>
+        <div>
+            Single stepping:  <input id='singlestepmode' type='checkbox' />
+        </div>
         <br />
         <ul id="playgroundLinks">
             <li><a id="renderexplorer-link" href="#">Renderer</a></li>
