--- a/playground/index.html
+++ b/playground/index.html
@@ -26,6 +26,7 @@
         </div>
         <div>
             Single stepping:  <input id='singlestepmode' type='checkbox' />
+            <input id='singlestepspeed' type='range' min='1' max='20' value='10' />
         </div>
         <br />
         <ul id="playgroundLinks">
