--- a/playground/index.html
+++ b/playground/index.html
@@ -63,8 +63,10 @@
 
     <div id="blocks"></div>
 
-    <!-- FPS counter, Syntax highlighter, Blocks, Renderer -->
+    <!-- FPS counter, Syntax highlighter, Renderer -->
     <script src="./vendor.js"></script>
+    <!-- Scratch Blocks -->
+    <script src="./vertical.js"></script>
     <!-- VM Worker -->
     <script src="./vm.js"></script>
     <!-- Playground -->
